# photo-store

./: .envrc  .envrc.tmpl  .gitignore  Cargo.toml  README.md  index.html  justfile
.github/workflows/: ci.yml
backend/: .env  Cargo.toml
backend/db/migrations/: 0_initial_schema.sql  20231009164750_initial_schema.sql
backend/src/: config.rs  ctx.rs  database.rs  endpoints.rs  error.rs  main.rs  middleware.rs  session.rs  storage.rs  ulid.rs
backend/src/auth/: error.rs  github.rs  google.rs  handlers.rs  middleware.rs  mod.rs  repository.rs  routes.rs
backend/src/entity/: app_users.rs  auth_tokens.rs  files.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  upload_sessions.rs  user_accounts.rs  user_keys.rs
backend/src/file/: error.rs  handlers.rs  mod.rs  repository.rs  routes.rs
backend/src/migration/: m20240101_000001_initial_schema.rs  mod.rs
backend/src/upload/: handlers.rs  mod.rs  repository.rs  routes.rs
backend/src/user/: handlers.rs  mod.rs  repository.rs  routes.rs
backend/tests/: dev.rs
clients/: package.json  pnpm-lock.yaml  vite.config.ts
clients/.husky/: pre-commit
clients/native/: DESIGN_SYSTEM.md  DESIGN_SYSTEM_EXAMPLES.md  angular.json  package-lock.json  package.json  tsconfig.json
clients/native/src/: index.html  styles.scss
clients/native/src-tauri/: Cargo.toml
clients/native/src-tauri/src/: auth.rs  database.rs  handlers.rs  lib.rs  main.rs  sync.rs
clients/native/src-tauri/src/image/: image_protocol.rs  mod.rs
clients/native/src/app/: app.routes.ts
clients/native/src/app/gallery/: gallery.html  gallery.scss  gallery.ts
clients/native/src/app/gallery/image-preview-dialog/: image-preview-dialog.css  image-preview-dialog.scss  image-preview-dialog.ts
clients/native/src/app/gallery/image-thumbnail/: image-thumbnail.scss  image-thumbnail.ts
clients/native/src/app/intro/: intro.html  intro.scss  intro.ts
clients/native/src/app/login/: login.html  login.scss  login.ts
clients/native/src/theme/: _base.scss  _buttons.scss  _dialog.scss  _forms.scss  _mixins.scss  _typography.scss  _variables.scss  index.scss
clients/src/: App.svelte  app.css  main.ts  navigation.svelte.ts
clients/src-tauri/: Cargo.toml  tauri.conf.json
clients/src-tauri/capabilities/: migrated.json
clients/src-tauri/src/: auth.rs  database.rs  error.rs  files.rs  handlers.rs  http.rs  lib.rs  state.rs  sync.rs
clients/src-tauri/src/auth/: handlers.rs
clients/src-tauri/src/http/: auth.rs
clients/src-tauri/src/image/: image_protocol.rs  mod.rs
clients/src/app/: app.component.ts  app.config.ts
clients/src/app/gallery/: gallery.html  image.ts
clients/src/app/gallery/image-preview-dialog/: image-preview-dialog.html
clients/src/app/gallery/image-thumbnail/: image-thumbnail.html
clients/src/app/intro/: intro.html  intro.ts
clients/src/app/login/: login.html  login.ts
clients/src/components/: Button.svelte  ImagePreviewDialog.svelte  ImageThumbnail.svelte
clients/src/pages/: GalleryPage.svelte  IntroPage.svelte  LoginPage.svelte
clients/web/: package.json
clients/web/src/routes/auth/desktop/complete/: +page.svelte
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs  rsa.rs
crates/dtos/: Cargo.toml
crates/dtos/src/: auth.rs  file.rs  lib.rs
desktop/: .prettierignore  .prettierrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/.husky/: pre-commit
desktop/src/: App.svelte  app.css  navigation.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: database.rs  error.rs  handlers.rs  http.rs  lib.rs  main.rs
desktop/src-tauri/src/http/: auth.rs
desktop/src-tauri/src/image/: image_protocol.rs  mod.rs
desktop/src/components/: Button.svelte  ImagePreviewDialog.svelte  ImageThumbnail.svelte  InfiniteScroll.svelte  Photo.svelte  Photos.svelte
desktop/src/lib/: Greet.svelte  Photos.svelte  image.ts
desktop/src/pages/: GalleryPage.svelte  IntroPage.svelte
mobile/: .gitignore  capacitor.config.ts  ionic.config.json  package-lock.json  package.json
mobile/android/app/src/main/res/values/: strings.xml
sdk/: Cargo.toml
sdk/src/: lib.rs  media.rs  segment.rs  thumbnails.rs
sdk/src/crypto/: error.rs  mod.rs  rsa.rs
sdk/src/dtos/: file.rs
web/: pnpm-lock.yaml
web/src/lib/: config.ts
web/src/routes/auth/desktop/: +page.svelte
web/src/routes/auth/google/redirect/: +page.svelte
web/src/routes/signin/: +page.svelte
