[workspace]
resolver = "2"

members = [
    "backend",
    "clients/src-tauri",
    "crates/crypto",
    "crates/dtos",
]

[workspace.dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
