[workspace]
resolver = "2"

members = [
    "backend",
    # "clients/native/src-tauri",
    "sdk",
]

[workspace.dependencies]
anyhow = { version = "1.0.103" }
reqwest = { version = "0.13.4" }
strum = { version = "0.28.0", features = ["derive"] }
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4", "fast-rng"] }
