[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.80"
argon2 = "0.5.3"
async-trait = "0.1.77"
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
axum = { version = "0.7.4", features = ["multipart"] }
base64ct = { version = "1.6.0", features = ["std"] }
config = "0.13.4"
crypto = { version = "0.1.0", path = "../crates/crypto" }
dtos = { version = "0.1.0", path = "../crates/dtos" }
http = "1.1.0"
jsonwebtoken = "9.3.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "time", "migrate"] }
thiserror = "1.0.57"
time = { version = "0.3.36", features = ["parsing", "serde"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
tower-http = { version = "0.5.2", features = ["limit", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
uuid = { workspace = true }

[dev-dependencies]
anyhow = "1.0.80"
reqwest = { version = "0.12.4", features = ["multipart", "json"] }
