[package]
name = "backend"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
aws-config = "1.8.18"
aws-sdk-s3 = "1.137.0"
axum = { version = "0.8.9", features = ["multipart"] }
config = "0.15.25"
http = "1.4.2"
sdk = { version = "0.1.0", path = "../sdk" }
sea-orm = { version = "~2.0.0-rc.41", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "~2.0.0-rc.41", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.51", features = ["parsing", "serde"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["limit", "cors", "request-id", "trace", "util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ulid = { workspace = true }
uuid = { workspace = true }
