[package]
name = "sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = { workspace = true }
argon2 = "0.5.3"
base64ct = { version = "1.8.3", features = ["std"] }
bytes = "1.11.1"
rand = "0.8"
rsa = { version = "0.9.10", features = ["serde", "sha2"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
strum = { workspace = true }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde", "parsing", "formatting"] }
ulid = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
