[package]
name = "sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.11.0"
anyhow = { workspace = true }
argon2 = "0.5.3"
base64ct = { version = "1.8.3", features = ["std"] }
bytes = "1.12.0"
rand = "0.10"
rsa = { version = "0.10.0-rc.18", features = ["serde", "sha2"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
strum = { workspace = true }
thiserror = "2.0.18"
time = { version = "0.3.51", features = ["serde", "parsing", "formatting"] }
ulid = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
