[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64ct = { version = "1.6.0", features = ["std"] }
bytes = "1.5.0"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["serde","sha2"] }
sha2 = "0.10.8"
thiserror = "1.0.57"
uuid = { workspace = true }
