[package]
name = "photo-store"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "path-all", "dialog-open", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.18", features = ["multipart", "json"] }
rusqlite = { version = "0.30.0", features = ["bundled", "uuid", "time"] }
rusqlite_migration = "1.0.2"
thiserror = "1.0.40"
log = "0.4.19"
env_logger = "0.10.0"
walkdir = "2.3.3"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "serde"] }
fast_image_resize = "2.7.3"
image = "0.24.6"
kamadak-exif = "0.5.5"
time = { version = "0.3.23", features = ["serde"] }
sha2 = "0.10.7"
base64ct = { version = "1.6.0", features = ["std"] }
url = "2.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
